[package]
name = "prefixed-tsid"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/palform/prefixed-tsid/"
description = "Create Stripe-style prefixed database IDs that are type-safe and portable"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
tsid = { version = "0.3", features = ["debug"], default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
sea-orm = { version = "1", default-features = false, optional = true }
rocket = { version = "0.5", features = [
    "json",
], optional = true, default-features = false }
schemars = { version = "0.8", optional = true }
ts-rs = { version = "10", optional = true }

[features]
default = ["serde"]
sea-orm = ["dep:sea-orm"]
rocket = ["dep:rocket"]
serde = ["dep:serde"]
schemars = ["dep:schemars"]
ts-rs = ["dep:ts-rs"]
